--- a/box_utils/box_converter/huggingface-dataset-conversion/Dockerfile
+++ b/box_utils/box_converter/huggingface-dataset-conversion/Dockerfile
@@ -1,5 +1,8 @@
 FROM ros:noetic
 
+# used to debug in vscode in container
+ENV PYTHONPATH="/catkin_ws/devel/lib/python3/dist-packages:/opt/ros/noetic/lib/python3/dist-packages"
+
 RUN apt-get update && apt-get install -y \
     python3-pip \
     python3-virtualenv \
@@ -47,22 +50,6 @@ RUN . /opt/ros/$ROS_DISTRO/setup.sh && catkin build \
     signal_logger_msgs \
     gnss_msgs \
     && :
-
-# For debugging in vs code in docker
-
-# search for packages --> find /catkin_ws -type d -name gnss_msgs | grep dist-packages
-# test symbolic linke --> find /catkin_ws -type l -name gnss_msgs | grep dist-packages
-
-# ## Create symlinks for ROS packages in the virtualenv
-RUN VENV_SITE_PACKAGES=/opt/venv/lib/python3.8/site-packages && \
-ln -s /opt/ros/noetic/lib/python3/dist-packages/sensor_msgs $VENV_SITE_PACKAGES/ && \
-ln -s /opt/ros/noetic/lib/python3/dist-packages/std_msgs $VENV_SITE_PACKAGES/ && \
-ln -s /opt/ros/noetic/lib/python3/dist-packages/genpy $VENV_SITE_PACKAGES/ && \
-ln -s /opt/ros/noetic/lib/python3/dist-packages/rospy $VENV_SITE_PACKAGES/ && \
-ln -s /opt/ros/noetic/lib/python3/dist-packages/roslib $VENV_SITE_PACKAGES/ && \
-ln -s /catkin_ws/devel/lib/python3/dist-packages/anymal_msgs /opt/venv/lib/python3.8/site-packages/ && \
-ln -s /catkin_ws/devel/lib/python3/dist-packages/gnss_msgs /opt/venv/lib/python3.8/site-packages/ && \
-ln -s /catkin_ws/devel/lib/python3/dist-packages/gps_common /opt/venv/lib/python3.8/site-packages/
 
 # entrypoint
 WORKDIR /app
