--- a/box_utils/box_auto/compose/kleinkram.yaml
+++ b/box_utils/box_auto/compose/kleinkram.yaml
@@ -127,29 +127,10 @@ services:
   #   - ie_tc.bag
   # Output:
   #   - tf_minimal.bag
-  tf_static_minimal:
-    <<: *common-config
-    container_name: calibration
-    command:
-      [
-        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/special/prepare_tf_transforms_for_public.py",
-      ]
-    depends_on:
-      calibration:
-        condition: service_completed_successfully
-      dlio_hesai:
-        condition: service_completed_successfully
-
-  # Input:
-  #   - tf_static_start_end.bag
-  #   - lpc_tf.bag
-  #   - hesai_dlio.bag
-  #   - ie_tc.bag
-  # Output:
   #   - tf_model.bag
-  tf_static_model:
+  tf_static_minimal_model:
     <<: *common-config
-    container_name: calibration
+    container_name: tf_static_minimal_model
     command:
       [
         "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/special/prepare_tf_transforms_for_public.py",
