--- a/box_utils/box_converter/grand_tour_ground.yaml
+++ b/box_utils/box_converter/grand_tour_ground.yaml
@@ -1,16 +1,17 @@
 base_frame: dlio_map
-num_images_per_topic: 1000
-skip_start_seconds: 60
-skip_end_seconds: 45
+num_images_per_topic: 20000
+skip_start_seconds: 0
+skip_end_seconds: 0
 hz: 4
-distance_threshold: 1.0
+distance_threshold: 0.5
 
 cameras:
-- name: front
-  image_topic: /gt_box/hdr_front/image_raw/compressed
-  info_topic: /gt_box/hdr_front/camera_info
-  bag_pattern: "*_hdr_front_calib.bag"
-  depth_topic_out:  /gt_box/hdr_front/depth
+  - name: front
+    image_topic: /gt_box/hdr_front/image_raw/compressed
+    info_topic: /gt_box/hdr_front/camera_info
+    bag_pattern_info: "*_hdr_front_calib.bag"
+    bag_pattern_image: "*_hdr_front_updated.bag"
+    depth_topic_out: /gt_box/hdr_front/depth
 
 nerfstudio:
   blur_threshold: 0 # 80 is pretty good
@@ -19,9 +20,9 @@ nerfstudio:
 
 wavemap:
   log_odds_occupancy_threshold: 0.1
-  max_range: 150
+  max_range: 5
   default_depth_value: -1.0
   save_ros: True
   save_png: True
-  ground : True
+  ground: True
   key: "ground"
