--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ box_utils/box_converter/cluster/.submit/*
 box_utils/box_converter/cluster/.export/*
 box_utils/box_auto/docker/.secrets/*
 box_utils/box_converter/cluster/.out/*
+box_applications/waypoint_ie_10_00_1206/*
